# learning-python

./: pyproject.toml
chapter_1/: archive.py  quotes.py  spells.py
chapter_10/: exceptions.py  exercises.py  functions.py
chapter_11/: exercises.py  named_tuples.py  objects.py
chapter_12/: exercises.py  lunch.py  questions.py
chapter_13/: info.txt
chapter_14/: exercises.py  main.py
chapter_15/: doctests.py  exercises.py  linting.py  test_cap_pytest.py  unittests.py
chapter_16/: debugging.py  exercises.py
chapter_17/: exercises.py  regulars.py  unicodes.py
chapter_18/: bytes.py  exercises.py
chapter_19/: exercises.py  times.py  today.txt
chapter_2/: variables.py
chapter_20/: directories.py  exercises.py  files.py  operations.py  pathnames.py
chapter_21/: asyncgronous.py  cf.py  command_automation.py  dishes.py  exercises.py  gevent_test.py  mp.py  mp_2.py  processes.py  threads.py
chapter_22/: exercises.py  tcp_client.py  tcp_server.py  udp_client.py  udp_server.py  xmlrpc_client.py  zmq_client.py  zmq_pub.py  zmq_server.py  zmq_sub.py
chapter_23/: alchemy.py  books.db  csvs.py  dbms.py  definitions  enterprise.db  exercises.py  jsons.py  mcintyre.yaml  relational.py  villains  xmls.py  yamls.py
chapter_24/: links.py  main.py  movie.py  req_client.py  url_client.py  websock.py
chapter_25/: exercises.py  numpys.py  panda.py  standard.py
chapter_26/: exercises.py
chapter_3/: bools.py  exercises.py  floats.py  integers.py
chapter_4/: exercises.py  strings.py
chapter_5/: bytearrays.py  bytes.py  exercises.py
chapter_6/: conditionals.py  (+1 more)
(+11 files in other folders)
