[project]
name = "learning-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "fastapi[standard]>=0.118.2",
    "gevent>=25.9.1",
    "invoke>=2.2.0",
    "jinja2>=3.1.6",
    "pytest>=8.4.2",
    "pyyaml>=6.0.3",
    "pyzmq>=27.1.0",
    "redis>=6.4.0",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.43",
    "websockets>=15.0.1",
]
